# epidemiological-datasets

./: README.md  coverage.xml  pyproject.toml
.github/workflows/: python-publish.yml
docs/examples/: 07_Eurostat_EU_Health_Data.ipynb  23_Pakistan_NIH_Surveillance.ipynb  24_Oman_MOH_Health_Data.ipynb  respicast_example.ipynb
src/epidatasets/: __init__.py
src/epidatasets/sources/: __init__.py  oman_moh.py  pakistan_nih.py  respicast.py
tests/: test_accessors.py
