[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epidatasets"
version = "0.4.0"
description = "Python library for accessing epidemiological datasets worldwide"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Flávio Codeço Coelho", email = "fccoelho@gmail.com"},
]
keywords = [
    "epidemiology",
    "public-health",
    "disease-surveillance",
    "health-data",
    "pysus",
    "datasus",
    "who",
    "world-bank",
    "ecdc",
    "paho",
    "owid",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Database",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "requests>=2.28.0",
    "ipykernel>=7.2.0",
    "pandas-stubs~=2.3.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "pypdf>=6.12.1",
]

[project.optional-dependencies]
who = [
    "ghoclient>=1.0.4",
]
brazil = [
    "pysus>=1.0.1",
]
eurostat = [
    "eurostat>=1.1.1",
]
climate = [
    "cdsapi>=0.7.7",
    "xarray>=2026.4.0",
]
geo = [
    "geopandas>=1.1.3",
    "folium>=0.14.0",
]
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
]
genomics = [
    "xmltodict>=1.0.4",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
worldbank = [
    "wbgapi>=1.0.12",
]
search = [
    "whoosh>=2.7.4",
]
scraping = [
    "bs4>=0.0.2",
    "lxml>=4.9.0",
]
pdf = [
    "pdfplumber>=0.10.0",
]
all = [
    "epidatasets[who,brazil,eurostat,climate,geo,viz,genomics,cli,worldbank,search,scraping,pdf]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.2.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-jupyter>=0.24.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "folium>=0.14.0",
    "geopandas>=0.13.0",
]

[project.scripts]
epidatasets = "epidatasets.cli:main"

[project.entry-points."epidatasets.sources"]
africa_cdc = "epidatasets.sources.africa_cdc:AfricaCDCAccessor"
cdc_opendata = "epidatasets.sources.cdc_opendata:CDCOpenDataAccessor"
china_cdc = "epidatasets.sources.china_cdc:ChinaCDCAccessor"
colombia_ins = "epidatasets.sources.colombia_ins:ColombiaINSAccessor"
copernicus_cds = "epidatasets.sources.copernicus_cds:CopernicusCDSAccessor"
datasus = "epidatasets.sources.datasus_pysus:DataSUSAccessor"
ecdc = "epidatasets.sources.ecdc_opendata:ECDCOpenDataAccessor"
epipulse = "epidatasets.sources.epipulse:EpiPulseAccessor"
eurostat = "epidatasets.sources.eurostat:EurostatAccessor"
global_health = "epidatasets.sources.global_health:GlobalHealthAccessor"
healthdata_gov = "epidatasets.sources.healthdata_gov:HealthDataGovAccessor"
india_idsp = "epidatasets.sources.india_idsp:IndiaIDSPAccessor"
infodengue = "epidatasets.sources.infodengue_api:InfoDengueAPI"
malaria_atlas = "epidatasets.sources.malaria_atlas:MalariaAtlasAccessor"
owid = "epidatasets.sources.owid:OWIDAccessor"
oman_moh = "epidatasets.sources.oman_moh:OmanMOHAccessor"
paho = "epidatasets.sources.paho:PAHOAccessor"
pakistan_nih = "epidatasets.sources.pakistan_nih:PakistanNIHAccessor"
pathoplexus = "epidatasets.sources.pathoplexus:PathoplexusAccessor"
respicast = "epidatasets.sources.respicast:RespiCastAccessor"
rki = "epidatasets.sources.rki_germany:RKIGermanyAccessor"
ukhsa = "epidatasets.sources.ukhsa:UKHSAAccessor"
who = "epidatasets.sources.who_ghoclient:WHOAccessor"

[project.urls]
Homepage = "https://github.com/fccoelho/epidemiological-datasets"
Documentation = "https://epidatasets.readthedocs.io"
Repository = "https://github.com/fccoelho/epidemiological-datasets"
Issues = "https://github.com/fccoelho/epidemiological-datasets/issues"
Changelog = "https://github.com/fccoelho/epidemiological-datasets/blob/main/CHANGELOG.md"

# ============================================================
# UV Configuration
# ============================================================

[tool.uv]
compile-bytecode = true
reinstall = false
resolution = "highest"

[dependency-groups]
dev = [
    "fpdf2>=2.8.7",
]

[tool.uv.pip]
generate-hashes = false
strict = false

# ============================================================
# Hatch Build Configuration
# ============================================================

[tool.hatch.build.targets.wheel]
packages = ["src/epidatasets"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    ".github",
    ".gitignore",
    ".pre-commit-config.yaml",
]

[tool.hatch.version]
path = "src/epidatasets/__init__.py"

# ============================================================
# Code Quality Tools
# ============================================================

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.ipynb",
    "docs/docs/examples/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["epidatasets"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "docs/",
]

# ============================================================
# Testing Configuration
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=epidatasets",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests that require API access",
    "external_api: marks tests that call external APIs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/epidatasets"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]

# ============================================================
# Project-specific Configuration
# ============================================================

[tool.epidatasets]
default_timeout = 30
max_retries = 3
cache_dir = "~/.cache/epidatasets"
data_dir = "./data"
